joplin/joplin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: joplin
  namespace: joplin
spec:
  selector:
    app: joplin
  ports:
  - port: 22300
    targetPort: 22300
