joplin/joplin-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin
  namespace: joplin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
spec:
  ingressClassName: nginx
  rules:
    - host: notes.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: joplin
                port:
                  number: 22300
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - notes.mdapi.ch
      secretName: joplin-cert
